--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-  <div class="jumbotron">
-    <h2>Flask Application</h2>
+  <div>
+    <h2>Splitwise Chatbot</h2>
   </div>
-  <div class="buttonCont" style="text-align:center;margin-top:10%">
-    <p>Flask template with Database and Login Manager</p>
+  <div>
+    <p>Chatbot is running.</p>
   </div>
 
 {% endblock %}
