--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,7 @@
   </div>
   <div>
     <p>Chatbot is running.</p>
+    <p>Code: <a href="https://github.com/namaggarwal/splitwise-chatbot">Github</a></p>
   </div>
 
 {% endblock %}
